# key-dash

./: .gitignore  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
key-dash-audio/: Cargo.toml
key-dash-audio/src/: lib.rs  midi_sequencer.rs  midi_source.rs
key-dash-audio/src/audio/: midi_sequencer.rs  midi_source.rs  midi_synth.rs  mod.rs
key-dash-cli/: Cargo.toml
key-dash-cli/locales/: en.yml
key-dash-cli/src/: main.rs
key-dash-cli/src/ui/: mod.rs
key-dash-cli/src/ui/tab/: mod.rs
locales/: en.yml  zh-CN.yml
src/: action.rs  app.rs  app_error.rs  event.rs  main.rs  utils.rs
src/app/: mod.rs
src/cli/: commands.rs  mod.rs
src/configs/: config_theme.rs
src/configs/custom/: keymap_custom.rs  mod.rs
src/player/: mod.rs
src/player/audio/: midi_sequencer.rs  midi_source.rs  mod.rs
src/ui/: mod.rs
src/ui/tab/: mod.rs
