[package]
name = "key-dash"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["Cierra-Runis <byrdsaron@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rust-i18n = "3"
sys-locale = "0.3.2"
rustysynth = "1.3.5"
strum = { version = "0.27.1", features = ["derive"] }
