[package]
name = "key-dash"
version = "0.1.0"
description = "A Modern, Interactive, and Customizable MIDI Player for CLI"
authors = ["Cierra-Runis <byrdsaron@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
color-eyre = "0.6.3"
rust-i18n = "3"
sys-locale = "0.3.2"
rustysynth = "1.3.5"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.1", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "io-util",
  "sync",
] }
rodio = "0.20.1"
midi-msg = "0.8.0"
clap = { version = "4.5.37", features = ["derive"] }
