[workspace]
resolver = "2"
members = ["key-dash-*"]
default-members = ["key-dash-cli"]

[workspace.dependencies]
tokio = { version = "1.45.0", features = ["full"] }
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
color-eyre = "0.6.4"
rust-i18n = "3.1.4"
sys-locale = "0.3.2"
rustysynth = "1.3.5"
strum = { version = "0.27.1", features = ["derive"] }
rodio = "0.20.1"
midi-msg = "0.8.0"
clap = { version = "4.5.37", features = ["derive"] }
