[package]
name = "key-dash-audio"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
# External dependencies
strum = { workspace = true }
rustysynth = { workspace = true }
midi-msg = { workspace = true }
rodio = { workspace = true }
