[package]
name = "key-dash-cli"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
key-dash-audio = { path = "../key-dash-audio" }

# External dependencies
tokio = { workspace = true }
ratatui = { workspace = true }
strum = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
rust-i18n = { workspace = true }
sys-locale = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "key-dash"
path = "src/main.rs"
